force-app/main/default/objects/Transaction_History__x/Transaction_History__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>TransactionHistory</externalName>
    <label>Transaction History</label>
    <pluralLabel>Transaction Histories</pluralLabel>
</CustomObject>