force-app/main/default/objects/Transaction_History__x/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Transaction amount</description>
    <externalDeveloperName>Amount</externalDeveloperName>
    <label>Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>