force-app/main/default/objects/Transaction_History__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Description of the transaction</description>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>