force-app/main/default/objects/Transaction_History__x/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date of transaction</description>
    <externalDeveloperName>EffectiveDate</externalDeveloperName>
    <label>Effective Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>