force-app/main/default/objects/Transaction_History__x/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Associated Id of Loan Account</description>
    <externalDeveloperName>LoanAccountId</externalDeveloperName>
    <label>Loan Account</label>
    <length>18</length>
    <referenceTo>Loan_Account__x</referenceTo>
    <relationshipLabel>Transaction History</relationshipLabel>
    <relationshipName>Transaction_Histories</relationshipName>
    <type>ExternalLookup</type>
</CustomField>