force-app/main/default/objects/Transaction_History__x/fields/Other_Limits_and_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Other_Limits_and_Liabilities__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Other Limits and Liabilities</description>
    <label>Other Limits and Liabilities</label>
    <length>255</length>
    <referenceTo>Other_Limits_and_Liabilities__x</referenceTo>
    <relationshipLabel>Transaction History</relationshipLabel>
    <relationshipName>Transaction_History</relationshipName>
    <type>ExternalLookup</type>
</CustomField>