force-app/main/default/objects/Transaction_History__x/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date of when transaction was settled</description>
    <externalDeveloperName>PostDate</externalDeveloperName>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>