force-app/main/default/objects/Transaction_History__x/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Remaining balance on account</description>
    <externalDeveloperName>RunningBalance</externalDeveloperName>
    <label>Running Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>