force-app/main/default/objects/Transaction_History__x/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Source of transaction</description>
    <externalDeveloperName>Source</externalDeveloperName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>