force-app/main/default/objects/Transaction_History__x/fields/Term_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Term_Deposit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Associated Id of Term Deposit</description>
    <externalDeveloperName>TermDepositId</externalDeveloperName>
    <label>Term Deposit</label>
    <length>255</length>
    <referenceTo>Term_Deposit__x</referenceTo>
    <relationshipLabel>Transaction Histories</relationshipLabel>
    <relationshipName>Transaction_Histories</relationshipName>
    <type>ExternalLookup</type>
</CustomField>