force-app/main/default/objects/Transaction_History__x/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Time of transaction</description>
    <externalDeveloperName>Time</externalDeveloperName>
    <label>Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>