force-app/main/default/objects/Transaction_History__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Type of transaction (i.e. credit / debit)</description>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>